Fix spacing for border line

--- a/src/assets/styles/links.css
+++ b/src/assets/styles/links.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-wrap: wrap;
     row-gap: 30px;
-    margin-bottom: var(--space-xl);
+    padding-bottom: var(--space-xl);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
